--- a/library.html
+++ b/library.html
@@ -23,7 +23,7 @@
 <button class="btn btn-danger" data-toggle="modal" data-target="#exampleModal">Click me!</button>
 
 <div class=" main container">
- <div class="row">
+ <div class="row bookgrid">
     <div class="cardb">
         <p>Festim dos Corvos or a Long Title IDK</p>
         <p>George Martin</p>
@@ -76,7 +76,7 @@
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-
+  <script src="library.js"></script>
 
 </body>
 </html>
