--- a/library.html
+++ b/library.html
@@ -38,30 +38,41 @@
 
 <p>CLick bellow to add book</p>
 
-<button class="btn btn-danger" data-toggle="modal" data-target="#exampleModal">Click me!</button>
+<button class="btn btn-danger" data-toggle="modal" data-target="#bookcreatemodal">Click me!</button>
 
 <!-- Modal -->
-<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade" id="bookcreatemodal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+          <h5 class="modal-title" id="exampleModalLabel">ADD A BOOK</h5>
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
         </div>
-        <div class="modal-body">
-          <form action="POST">
-            <input type="text">
-
-            <button>Submit</button>
+        <div class="modal-body" id="addbookform">
+          <form action="" id="bookformid">
+            <div class="form-group">
+            <label for="booktitle">Title</label>
+            <input type="text" id="booktitle" class="form-control" required>
+          </div>
+          <div class="form-group">
+            <label for="author">Author</label>
+            <input type="text" id="bookauthor" class="form-control" required>
+          </div>
+          <div class="form-group">
+            <label for="bookpages">Pages</label>
+            <input type="number" id="bookpages" class="form-control" required>
+          </div>
+             
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-primary" id="booksave" data-dismiss="modal">Add Book!</button>
+          </div>
 
           </form>
         </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary">Save changes</button>
-        </div>
+        
       </div>
     </div>
   </div>
